--- a/src/view/play.html
+++ b/src/view/play.html
@@ -31,7 +31,7 @@
             </button>
           </div>
           <button class="control-btn library-btn">
-            <img src="../assets/librabry.svg" alt="">
+            <img src="../assets/library.svg" alt="">
           </button>
           <div class="volume-controls">
             <div class="volume-slider">
