--- a/src/view/play.html
+++ b/src/view/play.html
@@ -15,6 +15,14 @@
       <div class="drag"></div>
       <div class="play">
         <img id="album-cover" src="../assets/avatar.png" alt="">
+        <div id="song-info" class="song-info">
+          <div class="title-container">
+            <span id="title">Song's title goes here</span>
+          </div>
+          <div class="author-container">
+            <span id="author">and the author name goes here</span>
+          </div>
+        </div>
         <button onclick="changeImage()">change image</button>
         <div class="controls">
           <div class="player-controls">
