--- a/src/view/play.css
+++ b/src/view/play.css
@@ -17,26 +17,42 @@
   user-select: none;
 }
 
-.gradient {
-  position: absolute;
-  transition: background-color 1s ease;
+.song-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-wrap: nowrap;
 }
 
-.gradient-1 {
-  width: 300px;
-  height: 300px;
-  bottom: -123px;
-  right: -123px;
-  filter: blur(200px);
+.title-container {
+  max-width: 270px;
+  white-space: nowrap;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
+#title {
+  font-size: 28px;
+  font-weight: 700;
+  display: inline-block;
+}
 
-.gradient-2 {
-  width: 300px;
-  height: 300px;
-  top: -123px;
-  left: -88px;
-  filter: blur(200px);
+.author-container {
+  max-width: 215px;
+  white-space: nowrap;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+#author {
+  font-size: 14px;
+  font-weight: 500;
+  display: inline-block;
+}
+
+.too-long {
+  padding-left: 100%;
+  animation: move 10s linear infinite;
 }
 
 .control-btn {
@@ -150,3 +166,14 @@ input[type=range]::-webkit-slider-thumb {
   border-color: transparent;
   color: transparent;
 } */
+
+
+@keyframes move {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
